# ad-lakehouse

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
airflow/dags/: _spark.py  campaign_pull_dag.py  gdpr_delete_dag.py  maintenance_dag.py  medallion_dag.py
api/: campaigns.py  main.py
demo/: index.html
docker/airflow/: Dockerfile
docker/api/: Dockerfile
docker/trino/: jvm.config
docs/: business-value.md  gdpr-right-to-be-forgotten.md  performance.md
docs/superpowers/plans/: 2026-06-04-ad-lakehouse-plan2-events-api-silver.md  2026-06-04-ad-lakehouse-streaming-spine.md  2026-06-05-ad-lakehouse-plan3-gold.md  2026-06-05-ad-lakehouse-plan4-airflow.md  2026-06-05-ad-lakehouse-plan5-gdpr.md  2026-06-06-ad-lakehouse-plan6-performance.md
docs/superpowers/specs/: 2026-06-04-ad-lakehouse-design.md
gdpr/: efficiency_demo.py  forget_user.py  mor_demo.py
generator/: event.py  produce.py  session.py  stream.py
perf/: benchmark.py  build_tables.py
scripts/: smoke_session.py
streaming/: ingest_bronze.py  spark_session.py
tests/: test_api.py  test_campaigns.py  test_dags.py  test_event.py  test_gdpr.py  test_gold.py  test_perf.py  test_session.py  test_silver.py  test_smoke.py  test_stream.py
transform/: dim_campaign.py  fact_event.py  gold_delivery.py  gold_fill.py  gold_pacing.py  maintenance.py  run.py
trino/: 00_bronze_smoke.sql  01_silver_checks.sql  02_gold_queries.sql
