[project]
name = "ad-lakehouse"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "confluent-kafka>=2.3",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "pyspark==3.5.1", "fastapi>=0.115", "uvicorn>=0.32", "httpx>=0.27"]
airflow = ["apache-airflow==2.9.3"]

[tool.setuptools.packages.find]
# Explicit include (not auto-discovery): the repo root also holds non-package
# dirs (trino/, docker/) that would make setuptools' flat-layout heuristic ambiguous.
include = ["generator*", "api*", "transform*", "streaming*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
markers = ["integration: requires the docker stack running"]
addopts = "-m 'not integration'"
filterwarnings = [
  # FastAPI TestClient surfaces a Starlette/httpx deprecation that is not ours to fix.
  # The message wraps httpx/starlette.testclient in backticks; '.' matches them.
  "ignore:Using .httpx. with .starlette.testclient. is deprecated",
]
